# voxblox

./: .gitignore  Dockerfile  build_docker.sh  compile.sh  install_deps.sh  process_clusters.sh  process_clusters_parallel.sh  process_static.py  save_mesh.sh  set_ros.sh  set_ros_robolidar.sh  start_docker.sh  utils.py
map_builder/: CMakeLists.txt  launch_builder.sh  package.xml
map_builder/data/: cluster_labels.txt  global_infos.txt
map_builder/include/: cloud_classifier.h  ground_segmentation.h
map_builder/launch/: coda_classify.launch
map_builder/src/: cloud_classifier.cc  cloud_classifier_node.cc  ground_segmentation.cc
preprocess/: calibration.py  coda_to_kitti.py  coda_to_publisher.py  utils.py
voxblox_ros/: CMakeLists.txt
voxblox_ros/include/voxblox_ros/: cloud_classifier.h
voxblox_ros/launch/: coda_dataset.launch  coda_publisher.launch  cow_and_lady_dataset.launch  euroc_dataset.launch
