<?xml version="1.0"?>
<package format="2">
  <name>map_builder</name>
  <version>0.0.0</version>
  <description>Map Building from Mesh</description>

  <author email="arthurz@cs.utexas.edu">Arthur K. Zhang</author>

  <maintainer email="arthurz@cs.utexas.edu">Arthur K. Zhang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>gflags_catkin</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
</package>
